# get-lazy-with-llms-clinic

./: .gitignore  README.md
practice/: README.md
practice/01_explain_concept/: README.md
practice/01_explain_concept/context/: general_summarization_prompt.md
practice/01_explain_concept/evaluation/: chatgpt-4o-evaluates-gemini.md  gemini-evaluates-gemini.md  pplx-evaluates-gemini.md
practice/02_generate_landlab_model/: README.md
practice/03_containarize_landlab_model/: README.md
practice/03_containerize_landlab_model/: README.md
practice/03_containerize_landlab_model/result/dockerized-landlab-model/landlab-overland-flow-demo/: Dockerfile  overland_flow_simulation.py  pyproject.toml
practice/04_build_dirdigest_tool/: README.md
practice/04_build_dirdigest_tool/result/dirdigest/: .diringest  .gitignore  README.md  digest.md  pyproject.toml  setup_test_dirs.sh
practice/04_build_dirdigest_tool/result/dirdigest/dirdigest/: cli.py  constants.py  formatter.py
practice/04_build_dirdigest_tool/result/dirdigest/tests/: README.md  conftest.py  test_configuration.py  test_content_processing.py  test_output_formatting.py  test_traversal_filtering.py
practice/04_build_dirdigest_tool/result/dirdigest/tests/fixtures/test_dirs/complex_project/: .env  config.yaml
practice/04_build_dirdigest_tool/result/dirdigest/tests/fixtures/test_dirs/complex_project/src/feature/: module.py
practice/04_build_dirdigest_tool/result/dirdigest/tests/fixtures/test_dirs/content_processing_dir/: permission_denied_file.txt
practice/04_build_dirdigest_tool/result/dirdigest/tests/fixtures/test_dirs/lang_hint_project/: no_ext_file
practice/04_build_dirdigest_tool/result/dirdigest/tests/fixtures/test_dirs/large_files_dir/: large.txt
practice/04_build_dirdigest_tool/result/dirdigest/tests/fixtures/test_dirs/simple_project/: file2.md
practice/04_build_dirdigest_tool/result/dirdigest/tests/fixtures/test_dirs/special_chars_dir/: file with spaces.txt  file&name=problem?.py
practice/04_build_dirdigest_tool/result/dirdigest/tests/fixtures/test_dirs/special_chars_dir/path with 'quotes'/: file.txt
practice/04_build_dirdigest_tool/result/dirdigest/tests/fixtures/test_dirs/symlink_dir/: actual_file.txt  broken_link  broken_link_dir  link_to_file
practice/04_build_dirdigest_tool/result/dirdigest/tests/fixtures/test_dirs/symlink_dir/actual_dir/: file_in_actual_dir.txt
practice/05_autogenerate_codemeta_json/: README.md
practice/05_build_promptbuilder_tool/: README.md
practice/05_build_promptbuilder_tool/result/gemini_one_shot_solution/: README.md  pyproject.toml
practice/05_build_promptbuilder_tool/result/gemini_one_shot_solution/promptbuilder/: .promptbuilder.yaml  cli.py  interactive.py  utils.py
practice/05_build_promptbuilder_tool/result/gemini_one_shot_solution/sample-usecases/promptbuilder/context_docs/: 03_context.md
practice/05_build_promptbuilder_tool/result/gemini_one_shot_solution/sample-usecases/promptbuilder/generated_prompts/: promptbuilder_prompt_01.md
practice/06_build_diringest_tool/: README.md  dir-digest.py  test_dir_digest.py
practice/07_build_urlingest_tool/: urls_ingest.py
practice/08_build_promptbuilder_tool/: README.md
quick-demos/: README.md  Square_TestBasin.asc  ofdemo-animation.py  ofdemo-cli.py  ofdemo.py
theory/: A Method for Solving Complex Tasks with LLMs.md  Best Practices for Solving Tasks with LLMs.md  Curated LLM Resources.md  Effective LLM Prompting Strategies: From Simple to Complex.md  Epistemology of Tasks.md  Examples of Better Prompts.md  LLM Providers.md  META_PROMPT.md  Meta Prompt.md  Prompt Generation Engine.md  Recommended Tools.md  Use LLMs to Help You Write a Better Prompt.md  Use LLMs to help you write a good prompt.md
tools/dirdigest/: .diringest.example   README.md  digest.md  promptbuilderdigest.md  pyproject.toml
tools/dirdigest/dirdigest/: core.py
tools/dirdigest/dirdigest/utils/: clipboard.py  config.py  logger.py  patterns.py  tokens.py
tools/dirdigest/src/dirdigest/: __init__.py  __main__.py  cli.py  config.py  core.py  filtering.py  formatting.py  models.py  utils.py
tools/dirdigest/tests/: test_cli_args.py  test_output_formatting.py  test_traversal_filtering.py
tools/dirdigest/tests/fixtures/test_dirs/content_processing_dir/: utf8_chars.txt
tools/dirdigest/tests/fixtures/test_dirs/encoding_issues_dir/: latin1_file.txt  utf8_file.txt
tools/dirdigest/tests/fixtures/test_dirs/hidden_files_dir/: .config_file  visible_file.txt
tools/dirdigest/tests/fixtures/test_dirs/hidden_files_dir/.hidden_subdir/: visible_in_hidden.txt
tools/dirdigest/tests/fixtures/test_dirs/large_files_dir/: medium.txt  small.txt
tools/dirdigest/tests/fixtures/test_dirs/simple_project/: file1.txt
tools/dirdigest/tests/fixtures/test_dirs/simple_project/sub_dir1/: script.py
tools/dirdigest/tests/fixtures/test_dirs/special_chars_dir/: über_cool_file.txt
tools/promptbuilder/: README.md  digest.md  pyproject.toml
tools/promptbuilder/src/promptbuilder/: .promptbuilder.yaml  __init__.py  cli.py  config.py  context.py  example.promptbuilder.yaml  interactive.py  templating.py  utils.py
(+130 files in other folders)
