[tool.poetry]
name = "promptbuilder"
version = "0.1.0"
description = "A tool to generate meta-prompts for instructing LLMs to create task-performing prompts."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "promptbuilder"}]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
jinja2 = "^3.1"
pyperclip = "^1.8"

[tool.poetry.scripts]
promptbuilder = "promptbuilder.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"