[project]
name = "landlab-overland-flow-demo"
version = "0.1.0"
description = "A simple Landlab overland flow simulation."
dependencies = [
    "landlab",
    "numpy<2.0.0",
    "matplotlib",
]

requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"